# hometask2_5

./: main.py  pyproject.toml
